@@ -21,36 +21,41 @@ public class ItemRepositoryImpl implements ItemRepositoryCustom {
     private final JPAQueryFactory queryFactory;
 
     @Override
-    public ItemDto.ItemCondResponse findItemListByCond(ItemDto.ItemCondRequest dto) {
-        Pageable pageable = PageRequest.of(dto.getNowPage() - 1, 10);
+    public ItemDto.ItemCondResponse findItemListByCond(String itemSort, Long categoryId, String itemName, Boolean isDelete, int nowPage) {
+        Pageable pageable = PageRequest.of(nowPage - 1, 10);
         JPAQuery<Item> query = queryFactory.selectFrom(item);
+        JPAQuery<Long> countQuery = queryFactory
+                .select(item.count())
+                .from(item);
 
-        if (dto.getCategoryId() != null) {
-            query.where(item.categoryId.id.eq(dto.getCategoryId()));
+        if (categoryId != null) {
+            query.where(item.categoryId.id.eq(categoryId));
+            countQuery.where(item.categoryId.id.eq(categoryId));
         }
 
-        if (dto.getItemName() != null) {
-            query.where(item.name.eq(dto.getItemName()));
+        if (itemName != null) {
+            query.where(item.name.eq(itemName));
+            countQuery.where(item.name.eq(itemName));
         }
 
-        if (dto.getIsDelete() != null) {
-            query.where(item.isDelete.eq(dto.getIsDelete()));
+        if (isDelete != null) {
+            query.where(item.isDelete.eq(isDelete));
+            countQuery.where(item.isDelete.eq(isDelete));
         }
 
-        if (dto.getItemSort() != null) {
-            if (dto.getItemSort().equals("new")) {
+        if (itemSort != null) {
+            if (itemSort.equals("new")) {
                 query.orderBy(item.createdDate.asc());
-            } else if (dto.getItemSort().equals("sale")) {
+            } else if (itemSort.equals("sale")) {
                 query.orderBy(item.discountRate.desc());
             }
         }
 
-        QueryResults<Item> results = query
+        List<ItemDto.ItemResponse> results = query
                 .offset(pageable.getOffset())
                 .limit(pageable.getPageSize())
-                .fetchResults();
-
-        List<ItemDto.ItemResponse> itemList = results.getResults().stream()
+                .fetch()
+                .stream()
                 .map(item -> new ItemDto.ItemResponse(
                         item.getId(),
                         item.getName(),
@@ -61,9 +66,12 @@ public class ItemRepositoryImpl implements ItemRepositoryCustom {
                         item.isSell(),
                         item.getMainImg()
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
-        return new ItemDto.ItemCondResponse(itemList, results.getTotal(), dto.getNowPage());
+        Long total = countQuery.fetchOne();
+
+        int totalPages = (int) Math.ceil((double) total / pageable.getPageSize());
+        return new ItemDto.ItemCondResponse(results, totalPages, nowPage);
 
     }
 }
